--- a/Node_js_api/.env
+++ b/Node_js_api/.env
@@ -1,2 +1,2 @@
-MONGODB_uri=mongodb+srv://dhanrajkushwah007:IkcH3wHrbFRoElLM@dhanrajproject.ltnqb.mongodb.net/imagedata
+MONGODB_uri=mongodb+srv://Contas:nuouP4MyDhH0q3E4@cluster0.gkkofhc.mongodb.net/EcomerceData3
 JWT_SECRET=dhanrajkushwah
